# mpc-repl-dev

./: .gitignore  README.md
circom-server/: index.js
server/: Cargo.toml  README.md
server/src/: main.rs  roommanager.rs
tcpduplex/: Cargo.toml  README.md
tcpduplex/src/: lib.rs  main.rs  roommanager.rs
tcpduplex/src/protocol/: connection.rs  mod.rs
web-client/: package.json  tsconfig.json  webpack.config.js
web-client/public/: index.html  room.html
web-client/src/: app.ts  room.ts
