[package]
name = "server"
version = "0.1.0"
edition = "2021"


[dependencies]
warp = "0.3"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"   
uuid = { version = "1.7.0", features = ["v4","fast-rng", "macro-diagnostics"]}