[package]
name = "tcpduplex"
version = "0.1.0"
edition = "2021"


[dependencies]
warp = "0.3"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"   
uuid = { version = "1.7.0", features = ["v4","fast-rng", "macro-diagnostics"]}
yamux = "0.13.1"
log = "0.4.14"
bytes = "1.5.0"
tokio-util = "0.7"